--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,19 +17,25 @@ disabled_rules: # rule identifiers to exclude from running
   - control_statement
   - explicit_self
   - file_header # check per project
+  - multiline_arguments_brackets
   - prefixed_toplevel_constant
   - single_test_class # todo: check again later
   - sorted_imports
   - trailing_closure
+  - type_contents_order
+  - unneeded_parentheses_in_closure_argument
   - vertical_parameter_alignment # todo: check again later
   - vertical_parameter_alignment_on_call # todo: check again later
+  - vertical_whitespace_opening_braces
 # idiomatic
+  - discouraged_optional_collection
   - explicit_acl
   - explicit_init
   - explicit_top_level_acl
   - explicit_type_interface
   - extension_access_modifier
   - file_name # todo: check again later
+  - force_unwrapping
   - implicitly_unwrapped_optional # todo: check again later
   - object_literal
   - private_over_fileprivate # todo: check again later
@@ -99,7 +105,6 @@ opt_in_rules: # some rules are only opt-in
   - literal_expression_end_indentation
   - modifier_order
   - multiline_arguments
-  - multiline_arguments_brackets
   - multiline_function_chains
   - multiline_literal_brackets
   - multiline_parameters
@@ -122,20 +127,16 @@ opt_in_rules: # some rules are only opt-in
   - trailing_comma
   - trailing_newline # todo: check later if useful
   - trailing_whitespace # todo: check later if useful
-  - type_contents_order # todo: check later if useful
-  - unneeded_parentheses_in_closure_argument
   - unused_optional_binding
   - vertical_whitespace
   - vertical_whitespace_between_cases
   - vertical_whitespace_closing_braces # todo: check later if useful
-  - vertical_whitespace_opening_braces # todo: check later if useful
   - void_return # todo: check later if useful
 # idiomatic
   - block_based_kvo
   - convenience_type
   - discouraged_object_literal
   - discouraged_optional_boolean
-  - discouraged_optional_collection
   - duplicate_imports
   - explicit_enum_raw_value
   - fallthrough
@@ -144,7 +145,6 @@ opt_in_rules: # some rules are only opt-in
   - for_where
   - force_cast
   - force_try
-  - force_unwrapping # todo: check later if useful
   - function_default_parameter_at_end
   - generic_type_name # todo: check later to add config
   - is_disjoint
@@ -251,10 +251,10 @@ large_tuple:
   warning: 3
   error: 4
 line_length:
-  warning: 120
+  warning: 150
   error: 200
   ignores_urls: true
-  ignores_function_declarations: false
+  ignores_function_declarations: true
   ignores_comments: true
   ignores_interpolated_strings: true
 # performance
