--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,6 +17,8 @@ disabled_rules: # rule identifiers to exclude from running
   - control_statement
   - explicit_self
   - file_header # check per project
+  - identifier_name
+  - multiline_arguments
   - multiline_arguments_brackets
   - prefixed_toplevel_constant
   - single_test_class # todo: check again later
@@ -96,7 +98,6 @@ opt_in_rules: # some rules are only opt-in
   - empty_parameters
   - empty_parentheses_with_trailing_closure
   - file_types_order # todo: check later if useful
-  - identifier_name # todo: check later to add config
   - implicit_getter
   - implicit_return
   - indentation_width
@@ -104,7 +105,6 @@ opt_in_rules: # some rules are only opt-in
   - let_var_whitespace
   - literal_expression_end_indentation
   - modifier_order
-  - multiline_arguments
   - multiline_function_chains
   - multiline_literal_brackets
   - multiline_parameters
